# food_iq

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci-pipeline.yml
backend/: .env  .env.example  Dockerfile  README.md  Sheet.csv  __init__.py  check_env.py  dbcreateandinsert.py  docker_check_env.py  main.py  pyproject.toml  q.py  remove_duplicates_by_name.py  remove_null.py  requirements.txt  schemas.py  simple_chat_test.py  test_chat.py
backend/auth/: __init__.py  auth.py  models.py
backend/db/: database.py  dbcreateandinsert.py  delete_specific_ids.py  import_sheet.py  init_auth.py  remove_column.py
backend/endpoints/: README.md  __init__.py  auth_endpoint.py  chatbot.py  food_router.py  imageprocess.py  user_endpoint.py
backend/models/: README.md  __init__.py  database.py  food.py  food_queries.py  user.py
backend/services/: __init__.py  llm_service.py
backend/tests/: test_api.py  test_basic.py
backend/utils/: depth_estimation.py  food_recommendations.py  food_recommendations_llm.py
frontend/: .prettierignore  .stylelintrc.json  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/components/: About.css  About.tsx  CalorieIntake.css  CalorieIntake.tsx  DietSection1.css  DietSection1.tsx  DietSection2.css  DietSection2.tsx  DietSection3.css  DietSection3.tsx  FoodClasses.css  FoodClasses.tsx  FoodImageUpload.css  FoodImageUpload.tsx  Footer.css  Footer.tsx  HealthChat.css  HealthChat.tsx  HealthChatPromo.css  HealthChatPromo.tsx  HealthyEating.css  (+11 more)
(+20 files in other folders)
